--- a/style.css
+++ b/style.css
@@ -104,7 +104,9 @@ button {
 
 img.img-2{
     margin: 0;
-    padding:0;
+    padding:1 0 0 0;
+    color: antiquewhite;
+    
 }
 
 .add{
@@ -115,4 +117,9 @@ img.img-2{
     color: white;
     font-family: 'Montserrat', sans-serif;
 
+}
+
+
+@media screen and (min-width: 481px) {
+ 
 }
