--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    position:-ms-page;
     height: 100vh;
     background-color: hsl(30, 38%, 92%);  
 }
@@ -22,14 +23,15 @@ main{
     background-color: white;
     border-radius: 1rem;
     display:flex;
-    width: 35vw;
-    height: 50vh;
+    width: 775px;
+    height: 575px;
+    
 }
 
 .part-two{
     margin: 0;
     padding: 1rem 2rem 1rem 2rem;
-    height: 50vh;
+    height: 575px;
     display:flow-root;
     flex-direction: column;
     justify-content: center;   
@@ -37,18 +39,20 @@ main{
 
 .header{
     margin:0;
-    padding:2rem 0 2rem 0;
-    font-weight:800;
+    padding:1.5rem 0 0.5rem 0;
+    font-weight:900;
     font-size: 10px;
+    color: black;
     font-family: 'Montserrat', sans-serif;
-    opacity: 0.7;
+    opacity: 0.9;
     letter-spacing: 10px;
 }
 
 
 .topic{
-    padding:0rem 0 2rem 0;
+    padding:1rem 0 1.5rem 0;
     font-size: 20px;
+    width: 20ch;
     color: black;
     font-family: 'Fraunces', serif;
     font-weight:bolder;
@@ -56,18 +60,18 @@ main{
 }
 
 .descri{
-    padding:0rem 0 2rem 0;
+    padding:0 0 1rem 0;
     font-weight:800;
     font-size: 18px;
     line-height:2rem;
     color: black;
     font-family: 'Montserrat', sans-serif;
-    opacity: 0.7;
+    opacity: 0.9;
 }
 
 .dis-price{
     font-weight: bolder;
-    font-size: 40px;
+    font-size: 45px;
     color: hsl(158, 36%, 37%);
     font-family: 'Fraunces', serif;
 }
@@ -83,7 +87,7 @@ main{
 
 
 img.img-1{ 
-    height: 50vh;
+    height: 575px;
     border-radius: 1rem 0 0 1rem;
 }
 
@@ -92,8 +96,8 @@ img.img-1{
 }
 
 button {
-    margin: 3rem 0 0 0;
-    padding:1rem 5.3rem 1rem 5.3rem;
+    margin: 2rem 0 0 0;
+    padding:1.2rem 5.3rem 1.2rem 5.3rem;
     display: flex;
     font-family: 'Outfit', sans-serif;
     color: white;
@@ -104,22 +108,100 @@ button {
 
 img.img-2{
     margin: 0;
-    padding:1 0 0 0;
-    color: antiquewhite;
+    padding:0.3rem 0.5rem 0 0;
     
 }
 
 .add{
     margin: 0;
     padding: 0 0 0 1rem;
-    font-weight: bolder;
-    font-size: 20px;
+    font-weight:900;
+    font-size: 21px;
     color: white;
     font-family: 'Montserrat', sans-serif;
 
 }
 
 
-@media screen and (min-width: 481px) {
- 
+@media screen and (max-width: 600px) {
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    body{
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position:-ms-page;
+        background-color: hsl(30, 38%, 92%);
+    }
+
+    main{
+       /*  margin:0.5rem 1rem 0.5rem 1rem; */
+        padding: 0;
+        background-color: white;
+        border-radius: 0.6rem;
+        display:grid;
+        width: 400px;
+        height: 650px;
+    }
+
+    img.img-1{ 
+        width:400px;
+        height:250px;
+        border-radius: 1rem 1rem 0 0;
+    }
+
+      .part-two{
+        margin: 0;
+        padding: 1rem 1.5rem 1rem 1.5rem;
+        height: 350px;
+        display:flow-root;
+        flex-direction: column;
+        justify-content: center;  
+    }
+
+    .header{
+        font-size: 8px;
+        padding: 0 0 0.25rem 0;
+        letter-spacing: 5px;
+    }
+
+    .topic{
+        margin: 0;
+        padding: 0.25rem 0 0.5rem 0;
+        font-size: 16px;
+        width: 30ch;
+    }
+
+    .descri{
+        padding: 0.25rem 0 0.5rem 0;
+        font-size: 16px;
+        line-height:1.5rem;
+        width: 30ch;
+    }
+
+    .dis-price{
+        font-size: 35px;
+        padding: 0.5rem 0 0 0;
+    }
+
+    .normal-price{
+        padding:0.8rem 1rem 0rem 2rem;
+    }
+    
+    button {
+        margin:1rem 0 0 0;
+        align-items: center;
+        padding: 1rem 5.6rem 1rem 5.6rem;
+    }
+
+    .add{
+        margin: 0;
+        padding: 0 0 0 1rem;
+        font-size: 15px;
+    }
+
 }
