--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,100&family=Montserrat:wght@100&display=swap');
- @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,100&family=Montserrat:wght@100&display=swap');
+
+
+  @import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@400;700&family=Montserrat:wght@400;700&display=swap');
 
 
 *{
@@ -44,7 +45,7 @@ main{
     font-size: 10px;
     color: black;
     font-family: 'Montserrat', sans-serif;
-    opacity: 0.9;
+    opacity: 0.5;
     letter-spacing: 10px;
 }
 
@@ -66,7 +67,7 @@ main{
     line-height:2rem;
     color: black;
     font-family: 'Montserrat', sans-serif;
-    opacity: 0.9;
+    opacity: 0.5;
 }
 
 .dis-price{
@@ -78,7 +79,7 @@ main{
 
 .normal-price{
     padding:0.5rem 1rem 0rem 2rem;
-    font-weight:bold;
+    font-weight:700;
     font-size: 15px;
     text-decoration: line-through;
     opacity: 0.5;
@@ -99,7 +100,7 @@ button {
     margin: 2rem 0 0 0;
     padding:1.2rem 5.3rem 1.2rem 5.3rem;
     display: flex;
-    font-family: 'Outfit', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     color: white;
     border: none;
     border-radius: 0.5rem;
@@ -115,15 +116,15 @@ img.img-2{
 .add{
     margin: 0;
     padding: 0 0 0 1rem;
-    font-weight:900;
-    font-size: 21px;
+    font-weight:700;
+    font-size: 1.2rem;
     color: white;
     font-family: 'Montserrat', sans-serif;
 
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 720px) {
     *{
         margin: 0;
         padding: 0;
@@ -134,12 +135,11 @@ img.img-2{
         display: flex;
         justify-content: center;
         align-items: center;
-        position:-ms-page;
         background-color: hsl(30, 38%, 92%);
     }
 
     main{
-       /*  margin:0.5rem 1rem 0.5rem 1rem; */
+        margin:0.5rem 1rem 0.5rem 1rem;
         padding: 0;
         background-color: white;
         border-radius: 0.6rem;
@@ -149,16 +149,17 @@ img.img-2{
     }
 
     img.img-1{ 
+        content: url("images/image-product-mobile.jpg");
         width:400px;
         height:250px;
-        border-radius: 1rem 1rem 0 0;
+        border-radius: 0.6rem 0.6rem 0 0;
     }
 
       .part-two{
         margin: 0;
         padding: 1rem 1.5rem 1rem 1.5rem;
         height: 350px;
-        display:flow-root;
+        display:flex;
         flex-direction: column;
         justify-content: center;  
     }
@@ -189,7 +190,7 @@ img.img-2{
     }
 
     .normal-price{
-        padding:0.8rem 1rem 0rem 2rem;
+        padding:1.2rem 1rem 0rem 2rem;
     }
     
     button {
